# stm32g0-rust

./: .gitignore  Cargo.toml  Makefile.toml  README.md  jlink.gdb  memory.x
.cargo/: config
src/: debug.rs  main.rs  semihosting.rs
