[package]
authors = ["Michael Mogenson <michael.mogenson@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32g0-rust"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-rtfm = "0.5.1"
cortex-m-semihosting = "0.3.5"
heapless = "0.5.3"
nb = "0.1.2"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"

[dependencies.stm32g0xx-hal]
default-features = false
git = "https://github.com/stm32-rs/stm32g0xx-hal.git"
features = ["rt", "stm32g031"]

[profile.release]
codegen-units = 1
debug = true
incremental = false
lto = true
opt-level = 's'
panic = "abort"
